syntax = "proto3";

package auth;

option go_package = "services/auth/internal/pb";

service Auth {
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Logout(LogoutRequest) returns (LogoutResponse) {}
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Info(InfoRequest) returns (InfoResponse) {}
}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message LogoutRequest {
  string token = 1;
}

message LogoutResponse {}

message RegisterRequest {
  string login = 1;
  string password = 2;
}

message RegisterResponse {}


message InfoRequest {
  string token = 1;
}

message InfoResponse {
  int64 userID = 1;
}